# Web4_example

./: .gitignore  README.md  redeploy.sh
contract/: Cargo.toml  build.sh  redeploy.sh
contract/res/: web4_example.wasm
contract/src/: lib.rs  utils.rs  web4.rs
contract2/: Cargo.toml  build.sh  redeploy.sh  without_delete.sh
contract2/src/: lib.rs  tipping.rs  utils.rs
design/: about.html  account.html  index.html  read.html  write.html
design/controller/: login_controller.html
design/precompile/: precompile.html
design/shared/: body.html  construct_card.js  css.html  footer.html  head.html  importmap.html  js.html  navbar.html  pagination.html
precompiler/: Cargo.toml
precompiler/src/: main.rs
res/: contract2.wasm  web4_example.wasm
web4_example/: package.json
web4_example/.parcel-cache/: 04391cb6a531f53e  0d596790224ac932  2c50807d7102764d  478f64a8d50fd899.txt  4d6a56602ab275a9  914f3da16876282d  lock.mdb
web4_example/contract/: Cargo.toml  redeploy.sh
web4_example/contract/res/: web4_example.wasm
web4_example/contract/src/: lib.rs  utils.rs  web4.rs
web4_example/contract/src/design/: about.html  body_js.html  css.html  importmap.html  index.html  write.html
web4_example/contract/src/design/controller/: login_controller.html
web4_example/contract/src/design/shared/: js.html  navbar.html
web4_example/contract2/: Cargo.toml
web4_example/frontend/assets/js/near/: config.js
